set overflow: hidden on ol inside textimage paragraphs, to avoid wrapping list items below the image - it looks wrong

--- a/resources/gato-template/css/textimage.scss
+++ b/resources/gato-template/css/textimage.scss
@@ -4,11 +4,12 @@
 	.gato-textimage-imageblock {
 	  width: 100%;
 	  display: block;
-		&.left { 
-            float: left; 
-            margin: $text-image-top $text-image-horiz $text-image-bottom 0px; 
+		&.left {
+            float: left;
+            margin: $text-image-top $text-image-horiz $text-image-bottom 0px;
             & ~ ul, & ~ ol{
                 list-style-position: inside;
+                overflow: hidden;
             }
         }
 		&.right { float: right; margin: $text-image-top 0px $text-image-bottom $text-image-horiz; }
